# septacrypt-fledgling

./: .gitignore  .starpod.json  README.md  pyproject.toml
docs/: ADR-001-names.md  API.md  PINS.md  PLAYER_GUIDE.md  SEPTACRYPT_FACE_MAP.md  STORY_PHYSICS.md  UI_BUILDER.md
docs/source_artifacts/: ARCHIVE_SHAS.txt  PARKED.md
docs/source_artifacts/RasiR4S1/: LICENSE  README.md  Star Sprout [R4S1].docx  build_html.py  index.html
docs/source_artifacts/dudecon_x_2026401325706260491/: README.md
docs/source_artifacts/peripheralarbor_fledgeling/: DIGEST.md
docs/source_artifacts/peripheralarbor_septacrypt/: DIGEST.md
examples/nested_reactor/: demo.py
examples/starpod/: demo.py
proofs/: prove_http_loop.py  prove_story_loop.py
src/septacrypt_fledgling/: __init__.py  __main__.py  cli.py  contracts.py  play.py
src/septacrypt_fledgling/minds/: __init__.py  adapter.py
src/septacrypt_fledgling/narrator/: __init__.py  client.py  fallback.py  journal.py  narrate.py  voices.py
src/septacrypt_fledgling/retro/: __init__.py  solver.py
src/septacrypt_fledgling/schema/: __init__.py  envelope.py
src/septacrypt_fledgling/server/: __init__.py  app.py  errors.py  (+2 more)
tests/: conftest.py  test_face_contracts.py  test_kairos_story.py  test_name_lint.py  test_narration_journal.py  test_narrator.py  test_nested_reactor.py  test_revival_replay.py  test_server_contract.py  test_server_story.py  test_spirit_story.py  test_story_compile.py  test_story_ingest.py  test_story_session.py  test_story_spec.py  test_story_verifier.py  test_umwelt_minds_adapter.py  test_voice_minds.py
(+11 files in other folders)
